--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,18 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+<ion-header >
+
+  <ion-navbar color=azulmarino>
+    <button ion-button menuToggle danger>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Oceans</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3 id='texto'>Ionic Menu Starter</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
