--- a/src/pages/wallpaper/wallpaper.html
+++ b/src/pages/wallpaper/wallpaper.html
@@ -12,14 +12,13 @@
       <ion-title>Wallpapers</ion-title>
     </ion-navbar>
 </ion-header>
+
 <ion-content padding>
-  <ion-segment [(ngModel)]="galleryType">#
+  <ion-segment [(ngModel)]="galleryType">
   <ion-segment-button value="buceo" >
     Buceo
   </ion-segment-button>
-  </ion-segment>
-  <ion-segment [(ngModel)]="galleryType">#
-    <ion-segment-button value="naturaleza" >
+  <ion-segment-button value="naturaleza" >
     Naturaleza
     </ion-segment-button>
     </ion-segment>
@@ -28,8 +27,8 @@
 
       <ion-grid *ngSwitchCase="'buceo'">
         <ion-row>
-          <ion-col *ngFor="let image of [1,2,3,4,5,6]">
-            <div class="image-container" [style.background-image]="'url(/assets/imgs/wallpapers/)+image+.jpg'">
+          <ion-col col-6 col-md-4 col-xl-3 *ngFor="let image of [1,2,3,4,5,6]">
+            <div class="image-container" [style.background-image]="'url(/assets/imgs/wallpapers/' + image + '.jpg)'">
 
             </div>
           </ion-col>
